# vedya

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: experiments.ipynb
src/analytics/: engine.py  llm_wrapper.py  monthly_analytics_engine.py
src/core/: config.py
src/ingestion/: loader.py  schema.py  transformer.py
